# PyCropPDF

./: README.md  pycroppdf.py  pyproject.toml  requirements.txt  run.py
packaging/pyinstaller_hooks/: hook-deskew.py
pycroppdf/: icons.py  main_window.py  provenance.py  rotation.py  run.py  state.py  widgets.py  workers.py
scripts/: build_windows.ps1
tests/: test_provenance.py  test_regressions.py  test_rotation.py  test_state_and_ui.py
